# fileupload-rs

./: Cargo.toml  README.md  config.toml  test.db
config/: cert.pem  key.pem
migrations/2021-04-21-200727_create_file_storage/: down.sql  up.sql
migrations/2021-04-23-204138_update_is_deleted_default/: up.sql
src/: config.rs  db.rs  encrypt_file.rs  file_encryption.rs  main.rs  models.rs  schema.rs  web_function.rs
src/models/: configuration.rs  upload_file.rs
