[package]
name = "fileupload-rs"
version = "0.1.0"
authors = ["Rohit Singh <rohit.singh@citrix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web
actix-web = { version = "3.0", features = ["openssl"] }
actix-files = "*"
openssl = "*"
actix-multipart = "*"
sanitize-filename = "*"

# log
log = "*"
env_logger = "*"

futures = "*"
futures-timer = "*"
tokio = {version = "1.5.0", features = ["time"]}
# serialization library
serde = "*"
serde_json = "*"
serde_derive = "*"

rand = "*"
chrono = { version = "*", features = ["serde"] }

diesel = { version = "1.4.4", features = ["sqlite", "chrono"] }
dotenv = "0.15.0"

cached = "*"
toml = "*"
strum = "*"
strum_macros = "*"